<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="csbslovenia.com.DInkan.verificationResult">
<ScrollView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/documentAuthenticForRoot"
        android:id="@+id/TVmessage"/>

    <ImageView
        android:src="@drawable/alert50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/VRpaddingT"
        android:layout_below="@id/TVmessage"
        android:id="@+id/IVsbtd"/>
    <TextView
        android:text="@string/VRsignBelongsToDoc"
        android:textSize="@dimen/VRtextSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="@dimen/VRpaddingL"
        android:paddingEnd="@dimen/VRpaddingL"
        android:paddingLeft="@dimen/VRpaddingR"
        android:paddingStart="@dimen/VRpaddingR"
        android:layout_toRightOf="@id/IVsbtd"
        android:layout_toEndOf="@id/IVsbtd"
        android:layout_alignBottom="@id/IVsbtd"
        android:id="@+id/TVsbtd"/>

    <ImageView
        android:src="@drawable/alert50"
        android:id="@+id/IVsbtpk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/VRpaddingT"
        android:layout_below="@id/TVsbtd"/>
    <TextView
        android:text="@string/VRsignBelongsToPubKey"
        android:textSize="@dimen/VRtextSize"
        android:layout_width="wrap_content"
        android:paddingRight="@dimen/VRpaddingL"
        android:paddingEnd="@dimen/VRpaddingL"
        android:paddingLeft="@dimen/VRpaddingR"
        android:paddingStart="@dimen/VRpaddingR"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/IVsbtpk"
        android:layout_toEndOf="@id/IVsbtpk"
        android:layout_alignBottom="@id/IVsbtpk"
        android:id="@+id/ZTVsbtpk"/>

    <ImageView
        android:src="@drawable/alert50"
        android:id="@+id/IVpkc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/VRpaddingT"
        android:layout_below="@id/IVsbtpk"/>
    <TextView
        android:text="@string/VRpubKeyCertified"
        android:textSize="@dimen/VRtextSize"
        android:layout_width="wrap_content"
        android:paddingRight="@dimen/VRpaddingL"
        android:paddingEnd="@dimen/VRpaddingL"
        android:paddingLeft="@dimen/VRpaddingR"
        android:paddingStart="@dimen/VRpaddingR"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/IVpkc"
        android:layout_toEndOf="@id/IVpkc"
        android:layout_alignBottom="@id/IVpkc"
        android:id="@+id/TVpkc"/>

    <ImageView
        android:src="@drawable/alert50"
        android:id="@+id/IVcit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/VRpaddingT"
        android:layout_below="@id/IVpkc"/>
    <TextView
        android:text="@string/VRcertTrusted"
        android:textSize="@dimen/VRtextSize"
        android:layout_width="wrap_content"
        android:paddingRight="@dimen/VRpaddingL"
        android:paddingEnd="@dimen/VRpaddingL"
        android:paddingLeft="@dimen/VRpaddingR"
        android:paddingStart="@dimen/VRpaddingR"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/IVcit"
        android:layout_toEndOf="@id/IVcit"
        android:layout_alignBottom="@id/IVcit"
        android:id="@+id/TVcit"/>

    <ImageView
        android:src="@drawable/alert50"
        android:id="@+id/IVcinr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/VRpaddingT"
        android:layout_below="@id/IVcit"/>
    <TextView
        android:text="@string/VRcertNotRevoked"
        android:textSize="@dimen/VRtextSize"
        android:layout_width="wrap_content"
        android:paddingRight="@dimen/VRpaddingL"
        android:paddingEnd="@dimen/VRpaddingL"
        android:paddingLeft="@dimen/VRpaddingR"
        android:paddingStart="@dimen/VRpaddingR"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/IVcinr"
        android:layout_toEndOf="@id/IVcinr"
        android:layout_alignBottom="@id/IVcinr"
        android:id="@+id/TVcinr"/>

    <ImageView
        android:src="@drawable/alert50"
        android:id="@+id/IVdt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/VRpaddingT"
        android:layout_below="@id/IVcinr"/>
    <TextView
        android:text="@string/VRdocTimestamped"
        android:textSize="@dimen/VRtextSize"
        android:layout_width="wrap_content"
        android:paddingRight="@dimen/VRpaddingL"
        android:paddingEnd="@dimen/VRpaddingL"
        android:paddingLeft="@dimen/VRpaddingR"
        android:paddingStart="@dimen/VRpaddingR"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/IVdt"
        android:layout_toEndOf="@id/IVdt"
        android:layout_alignBottom="@id/IVdt"
        android:id="@+id/TVdt"/>

    <ImageView
        android:src="@drawable/alert50"
        android:id="@+id/IVdswcv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/VRpaddingT"
        android:layout_below="@id/IVdt"/>
    <TextView
        android:text="@string/VRdocSignedWhileValidCert"
        android:textSize="@dimen/VRtextSize"
        android:layout_width="wrap_content"
        android:paddingRight="@dimen/VRpaddingL"
        android:paddingEnd="@dimen/VRpaddingL"
        android:paddingLeft="@dimen/VRpaddingR"
        android:paddingStart="@dimen/VRpaddingR"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/IVdswcv"
        android:layout_toEndOf="@id/IVdswcv"
        android:layout_alignBottom="@id/IVdswcv"
        android:id="@+id/TVdswcv"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TVdswcv"
        android:text="@string/but_vrOkay"/>
    </RelativeLayout>
</ScrollView>
</RelativeLayout>
